--- a/src/pages/cirle-area/cirle-area.html
+++ b/src/pages/cirle-area/cirle-area.html
@@ -14,5 +14,41 @@
 
 
 <ion-content padding>
+   <p>
+     <b> Area of a circle</b><br /><br />
+      <b>FORMULAR: </b><br />
+      Area of a circle = π x radius x radius<br />
+      A = π x r x r<br />
+      A = πr²<br />
+      where π = 3.14<br /><br />
+      <b>ILLUSTRATION: </b><br /><br />
+      <img src = "assets/imgs/radius.png"/><br /><br />
+      <img src = "assets/imgs/radius1.png"/><br /><br />
+      <b>Example 1: </b><br /><br />
+      Find the area of circle with a radius 4cm<br /><br />
+      <b>Solution: </b><br /><br />
+      radius = 4cm,   π = 3.14<br />
+      Area = πr²<br />
+      Area = 3.14 x 4²<br />
+      Area = 3.14 x 4 x 4<br />
+      Area = 50.24cm²<br /><br />
+      <b>Example 2 : </b><br /><br /> 
+      Find the area of circle with a radius 5m<br /><br />
+      <b>Solution: </b><br /><br />
+      radius = 5m,   π = 3.14<br />
+      Area = πr²<br />
+      Area = 3.14 x 5²<br />
+      Area = 3.14 x 5 x 5<br />
+      Area = 78.5cm²<br /><br />
+      <b>Example 2 : </b><br /><br /> 
+      Find the area of circle with a diameter of 12m<br /><br />
+      <b>Solution: </b><br /><br />
+      <img src="assets/imgs/radius2.gif"/> <br />
+      radius = diameter / 2 = 12 /2 = 6 ; <br /> π = 3.14<br />
+      Area = πr²<br />
+      Area = 3.14 x 6²<br />
+      Area = 3.14 x 6 x 6<br />
+      Area = 113.04m²<br /><br />
+   </p>
 
 </ion-content>
