--- a/src/pages/cirle-circum/cirle-circum.html
+++ b/src/pages/cirle-circum/cirle-circum.html
@@ -14,13 +14,42 @@
 
 
 <ion-content padding>
-<p>
-  <b>FORMULAR:</b>  Circumference = 2πr<br \>
+<p><b>Perimeter of a circle </b> <br />
+
+  The perimeter of a shape is the distance around the out side of the shape. 
+  The "circumference" of a circle is the distance around the circle. 
+  The distance across a circle is called the "diameter".
+  "Radius" of a circle is the distance from the centre to the circumference.
+  </p>
+  <p>
+  <b>FORMULAR:</b>  Circumference = 2πr <br />
   </p>
 <p>where</p>
   <p align = "middle">π = 3.14</p>
   <p align = "middle"> r = radius of the circle</p>
+  <p><b>OR</b><br /> Circumference = πd</p>
+  <p>where</p>
+  <p align = "middle">π = 3.14</p>
+  <p align = "middle"> d = diameter of the circle</p>
   <p><b>ILLUSTRATION: </b><br \>
   <img src="assets/imgs/circum.png"\>;
+</p>
+<p><b>EXAMPLE 1: </b><br />
+Calculate the circumference of a circle with radius 5m<br /><br />
+<b>Solution</b><br />
+<img src = "assets/imgs/note.jpg" \><br />
+Circumference = 2πr<br />
+Circumference = 2 x 3.14 x 5<br />
+Circumference = 31.4m<br /><br />
+</p>
+
+
+<p><b>EXAMPLE 2: </b><br />
+Calculate the circumference of a circle with diameter 8cm<br /><br />
+<b>Solution</b><br />
+<img src = "assets/imgs/diameter.jpg" \><br />
+Circumference = πr<br />
+Circumference =  3.14 x 8cm<br />
+Circumference = 25.12cm<br /><br />
 </p>
 </ion-content>
