--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -7,20 +7,22 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Welcome</ion-title>
+    <ion-title>GeoApp</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-    WELCOME to Geomobile! The mobile app that teaches you geometric figures formulars with illustration and examples.
-    <p>
-    <b>Click</b> on preferred geometric figure button to learn.
+<ion-content padding class = "bg-image">
+  <b>  WELCOME to Geomobile! The mobile app that teaches you geometric figures formulars with illustration and examples.
+  </b> <p>
+    <b>Click on preferred geometric figure button to learn.</b>
     </p>
     <button ion-button (click)="go()" block color="secondary" >Square</button>
   <button ion-button (click)= "go1()" block color="secondary" >Rectangle</button>
   <button ion-button (click)= "go2()" block color="secondary" >Circle</button>
-  <button ion-button (click)= "go3()"block color="secondary" >Triangle</button>
-
+  <button ion-button (click)= "go3()" block color="secondary" >Triangle</button>
+  <button ion-button (click)= "go4()" block color="secondary" >Polygons</button>
+  <button ion-button (click)= "go6()" block color="secondary" >Cuboid</button>
+  <button ion-button (click)= "go5()" block color="secondary" >Cube</button>
 </ion-content>
